--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
 
 
     </div>
-    <app-market-search></app-market-search>
+    <app-market-search *ngIf="breakPoint === 'mobile'"></app-market-search>
     <app-tools [dashboardItems]="widgets">
     </app-tools>
   </div>
