--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -153,7 +153,7 @@
       <a class="header__auth header__auth--log" (click)="onLogout()">Log out</a>
     </div>
     <ng-template #alien>
-      <a class="header__auth header__auth--log" (click)="onLogin()">Log in</a>
+      <a class="header__auth header__auth--log" (click)="onMobileLogin()">Log in</a>
       <!--<a class="header__logout" href="https://exrates.me/dashboards" target="_blank">Log in</a>-->
     </ng-template>
 
