--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -188,7 +188,7 @@
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>Already have an account?</span>
-        <a class="popup__link" (click)="openLogIn()">Log in</a>
+        <a class="popup__link" (click)="openLogInMobile()">Log in</a>
       </div>
 
       <a class="popup__link-mob" (click)="openLogInMobile()">Log in</a>
