--- a/src/assets/scss/pages/_login-registration.scss
+++ b/src/assets/scss/pages/_login-registration.scss
@@ -67,6 +67,11 @@
       color:#fff;
       border-color: transparent;
     }
+    &--error {
+      background-color: $red !important;
+      border-color: $red !important;
+      color: #fff !important;
+    }
   }
   &__links-wrap {
     display: -webkit-flex;
