--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -5,7 +5,7 @@
       <div class=" orders__page-title">
         Open orders
       </div>
-      <div class="orders__amount">{{countOfEntries}}</div>
+      <div class="orders__amount">{{countOfEntries$ | async}}</div>
       <div class="orders__filter-btn" (click)="openFilterPopup()">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />
@@ -28,7 +28,7 @@
       </thead>
       <tbody class="table__body table__body--none-shadow">
         <!-- t-row start-->
-        <ng-container *ngFor="let item of orderItems">
+        <ng-container *ngFor="let item of orderItems$ | async">
           <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
             <td class="table__cell table__cell--tal">
               <div>{{item.currencyPairName}}</div>
@@ -77,8 +77,7 @@
       </tbody>
     </table>
     <!--filter-popup start-->
-    <!--<div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">-->
-    <div class="filters-popup">
+    <div class="filters-popup" [ngClass]="{'show-filter-popup': showFilterPopup}">
       <div class="filters-popup__header">
         <div class=" filters-popup__title">
           Order filters
@@ -89,37 +88,53 @@
           </svg>
         </div>
       </div>
-      <!--<form action="#">-->
-        <!--<div class="wrap-input wrap-input&#45;&#45;with-icon filters-popup__search">-->
-          <!--<input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>-->
-          <!--<label class="wrap-input__label" >Search</label>-->
-          <!--<div class="wrap-input__icon">-->
-            <!--<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-              <!--<path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />-->
-            <!--</svg>-->
-          <!--</div>-->
-          <!--<div class="wrap-input__line"></div>-->
-        <!--</div>-->
-        <!--<div class="row row&#45;&#45;jcsb">-->
-          <!--<div class="wrap-input filters-popup__datepicker">-->
-            <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" >From</label>-->
+      <form action="#">
+        <div class="wrap-input wrap-input&#45;&#45;with-icon filters-popup__search">
+          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+          <label class="wrap-input__label" >Search</label>
+          <div class="wrap-input__icon">
+            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
+            </svg>
+          </div>
+          <div class="wrap-input__line"></div>
+        </div>
+        <div class="row row&#45;&#45;jcsb">
+          <div class="wrap-input filters-popup__datepicker">
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>
+            <my-date-picker 
+              name="from"
+              [options]="myDatePickerOptions" 
+              [(ngModel)]="modelDateFrom" 
+              (dateChanged)="dateFromChanged($event)"
+            >
+              &lt;!&ndash;&gt;&ndash;&gt;
+            </my-date-picker>
+            <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
+          </div>
+          <div class="wrap-input filters-popup__datepicker">
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
 
-            <!--<my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)"></my-date-picker>-->
-            <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
-          <!--</div>-->
-          <!--<div class="wrap-input filters-popup__datepicker">-->
-            <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" >To</label>-->
+            <my-date-picker 
+              class="input-el" 
+              name="to"
+              [options]="myDatePickerOptions" 
+              [(ngModel)]="modelDateTo"
+              (dateChanged)="dateToChanged($event)"
+            >
+              &gt;
+            </my-date-picker>
 
-            <!--<my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)">></my-date-picker>-->
-            <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <span>{{countOfEntries}}</span> results</button>-->
-      <!--</form>-->
+            <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
+          </div>
+        </div>
+        <button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <!--<span>{{countOfEntries$ | async}}</span>--> results</button>
+      </form>
     </div>
     <!--filter-popup end-->
   </div>
   <!--orders-mob end-->
+
   <!--orders-desktop start-->
   <div class="orders">
     <div class="page-title">
@@ -127,42 +142,52 @@
         Open orders
       </h1>
     </div>
-    <!--<form action="">-->
-      <!--<div class="row orders__filters">-->
-        <!--<div class="wrap-input wrap-input&#45;&#45;with-icon orders__search">-->
-          <!--<input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>-->
-          <!--<label class="wrap-input__label" >Currency</label>-->
-          <!--<div class="wrap-input__icon">-->
-            <!--<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-              <!--<path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />-->
-            <!--</svg>-->
-          <!--</div>-->
-          <!--<div class="search-results dropdown search">-->
-            <!--<ul class="dropdown__list">-->
-              <!--<li *ngFor="let item of pairs" (click)="selectNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>-->
-            <!--</ul>-->
-          <!--</div>-->
-          <!--<div class="wrap-input__line"></div>-->
-        <!--</div>-->
-        <!--<div class="wrap-input orders__datepicker">-->
-          <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" >From</label>-->
+    <form action="">
+      <div class="row orders__filters">
+        <div class="wrap-input wrap-input&#45;&#45;with-icon orders__search">
+          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+          <label class="wrap-input__label" >Currency</label>
+          <div class="wrap-input__icon">
+            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
+            </svg>
+          </div>
+          <!-- <div class="search-results dropdown search">
+            <ul class="dropdown__list">
+              <li *ngFor="let item of pairs" (click)="selectNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>
+            </ul>
+          </div> -->
+          <div class="wrap-input__line"></div>
+        </div>
+        <div class="wrap-input orders__datepicker">
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>
 
-          <!--<my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)">-->
-            <!--&lt;!&ndash;&gt;&ndash;&gt;-->
-          <!--</my-date-picker>-->
-          <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
-        <!--</div>-->
-        <!--<div class="wrap-input orders__datepicker input-el">-->
-          <!--<label class="wrap-input__label" [ngClass]="{'select-input_label': dateTo}" >To</label>-->
+          <my-date-picker 
+            name="from"
+            [options]="myDatePickerOptions" 
+            [(ngModel)]="modelDateFrom" 
+            (dateChanged)="dateFromChanged($event)"
+          >
+            &lt;!&ndash;&gt;&ndash;&gt;
+          </my-date-picker>
+          <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
+        </div>
+        <div class="wrap-input orders__datepicker input-el">
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
 
-          <!--<my-date-picker class="input-el" name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo"-->
-            <!--(inputFieldChanged)="onToInputFieldChanged($event)">-->
-            <!--&gt;-->
-          <!--</my-date-picker>-->
-          <!--<div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</form>-->
+          <my-date-picker 
+            class="input-el" 
+            name="to"
+            [options]="myDatePickerOptions" 
+            [(ngModel)]="modelDateTo"
+            (dateChanged)="dateToChanged($event)"
+          >
+            &gt;
+          </my-date-picker>
+          <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
+        </div>
+      </div>
+    </form>
     <!--table start-->
     <table class="table">
       <thead>
@@ -179,8 +204,8 @@
           <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
         </tr>
       </thead>
-      <tbody class="table__body" *ngIf="orderItems">
-        <tr class="table__row" *ngFor="let item of orderItems | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
+      <tbody class="table__body" >
+        <tr class="table__row" *ngFor="let item of orderItems$ | async | paginate: { itemsPerPage: countPerPage, currentPage: currentPage, totalItems: countOfEntries$ | async }">
           <td class="table__cell">
             <span>{{item.id}}</span>
           </td>
@@ -240,7 +265,7 @@
             <li class="dropdown__item" (click)="changeItemsPerPage($event)">44</li>
           </ul>
         </div>
-        of <span>{{countOfEntries}}</span> entries.
+        of <span>{{countOfEntries$ | async}}</span> entries.
       </div>
       <ul class="paginator" style="margin-left: auto;">
         <pagination-controls (pageChange)="changePage($event)" [previousLabel]="''" [nextLabel]="''"></pagination-controls>
