--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -103,13 +103,25 @@
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">From</label>
 
-            <my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)"></my-date-picker>
+            <my-date-picker 
+              name="from" 
+              [options]="myDatePickerOptions" 
+              [(ngModel)]="modelDateFrom" 
+              (inputFieldChanged)="onFromInputFieldChanged($event)"
+            ></my-date-picker>
+            
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
           <div class="wrap-input filters-popup__datepicker">
             <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">To</label>
 
-            <my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)"></my-date-picker>
+            <my-date-picker 
+              name="to" 
+              [options]="myDatePickerOptions" 
+              [(ngModel)]="modelDateTo" 
+              (inputFieldChanged)="onToInputFieldChanged($event)"
+            ></my-date-picker>
+
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
         </div>
