--- a/src/app/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -1,4 +1,4 @@
-<div class="title modal__title">Make crypto deposit in <span>BTC</span></div>
+<div class="title refill__title">Make crypto deposit in <span>BTC</span></div>
 <div class="refill__inputs-wrap">
   <div class="select refill__select">
     <div class="select__value select__value--active">
@@ -80,10 +80,6 @@
     <div class="refill__crypto-comission">Comission of exchange: 2 BTC</div>
   </div>
 </div>
-
-
-
-
 <div class="note modal__note">
   <div class="note__title">Please note:</div>
   <ul class="note__list">
