--- a/src/app/balance/refill-money/refill-step-two/refill-step-two.component.html
+++ b/src/app/balance/refill-money/refill-step-two/refill-step-two.component.html
@@ -1,3 +1,3 @@
-<app-refill-crypto></app-refill-crypto>
-<!--<app-refill-fiat></app-refill-fiat>-->
+<!--<app-refill-crypto></app-refill-crypto>-->
+<app-refill-fiat></app-refill-fiat>
 <!--<app-refill-inner-transfer></app-refill-inner-transfer>-->
