--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -114,7 +114,7 @@
   }
 
   &__message {
-    display: block;
+    display: none;
     margin-top: 4px;
     text-align: left;
     font-size: 12px;
