add step two component

--- a/src/app/balance/send-money/send-money.component.html
+++ b/src/app/balance/send-money/send-money.component.html
@@ -42,7 +42,9 @@
     </div>
     <!-- modal header end -->
     <div class="modal__content">
-      <app-send-step-one></app-send-step-one>
+      <!--<app-send-step-one></app-send-step-one>-->
+      <app-send-step-two></app-send-step-two>
+      <!--<app-send-step-three></app-send-step-three>-->
     </div>
   </div>
 </div>
