comment (hide) send in app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
         <app-recovery-pass></app-recovery-pass>
       </div>
       <!--<app-refill-money></app-refill-money>-->
-      <app-send-money></app-send-money>
+      <!--<app-send-money></app-send-money>-->
       <router-outlet></router-outlet>
 
       <!--<a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>-->
