add inner transfer step two

--- a/src/app/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
+++ b/src/app/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
@@ -1,3 +1,18 @@
-<p>
-  send-inner-transfer works!
-</p>
+<div class="title send__title">Make Inner transfer</div>
+<div class="send__row">
+  <button class="btn btn--empty-blue">Instant transfer</button>
+  <div class="send__transfer-description">Отправьте моментально перевод внутри биржи по email или nickname</div>
+</div>
+<div class="send__row">
+  <button class="btn btn--empty-blue">Protected by code & mail</button>
+  <div class="send__transfer-description">Make <b>password-protected</b> personal transfer
+    to another user by his <b>email or nickname</b>
+    <div class="small">(user can get the money if he knows the transfer code)</div>
+  </div>
+</div>
+<div class="send__row">
+  <button class="btn btn--empty-blue">Protected by code only</button>
+  <div class="send__transfer-description">Make <b>password-protected</b> transfer
+    <div class="small">Anyone who knows the code may recive the transfer</div>
+  </div>
+</div>
