added hystory orders

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,11 +14,11 @@
         </div>
       </li>
       <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop" ><span class="menu__link-text">Orders</span></a>-->
-      <li class="menu__item menu__item--with-submenu" routerLink="/orders"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
+      <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
-            <li class="submenu__item"><a class="submenu__link"  [routerLink]='["/orders/open"]'><span class="menu__link-text">Open orders</span></a></li>
-            <li class="submenu__item"><a class="submenu__link"  [routerLink]='["/orders/closed"]'><span class="menu__link-text">Orders history</span></a></li>
+            <li class="submenu__item"><a class="submenu__link"  routerLink="/orders/open"><span class="menu__link-text">Open orders</span></a></li>
+            <li class="submenu__item"><a class="submenu__link"  routerLink="/orders/closed"><span class="menu__link-text">Orders history</span></a></li>
           </ul>
         </div>
       </li>
