--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -90,13 +90,22 @@
       </div>
       <form action="#">
         <div class="wrap-input wrap-input&#45;&#45;with-icon filters-popup__search">
-          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+          <!-- <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
           <label class="wrap-input__label" >Search</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
             </svg>
-          </div>
+          </div> -->
+          <ng-select 
+            class="custom"
+            [items]="currencyPairs$ | async"
+            bindLabel="name"
+            placeholder="Currency"
+            bindValue="id"
+            name="currencyPair"
+            [(ngModel)]="currencyPairId"
+          ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
         <div class="row row&#45;&#45;jcsb">
@@ -145,18 +154,27 @@
     <form action="">
       <div class="row orders__filters">
         <div class="wrap-input wrap-input&#45;&#45;with-icon orders__search">
-          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+          <!-- <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
           <label class="wrap-input__label" >Currency</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
             </svg>
-          </div>
+          </div> -->
           <!-- <div class="search-results dropdown search">
             <ul class="dropdown__list">
               <li *ngFor="let item of pairs" (click)="selectNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>
             </ul>
           </div> -->
+          <ng-select 
+            class="custom"
+            [items]="currencyPairs$ | async"
+            bindLabel="name"
+            placeholder="Currency"
+            bindValue="id"
+            name="currencyPair"
+            [(ngModel)]="currencyPairId"
+          ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input orders__datepicker">
@@ -186,6 +204,9 @@
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
+        <button (click)="onFilterOrders()">
+          Search
+        </button>
       </div>
     </form>
     <!--table start-->
@@ -249,6 +270,9 @@
             </div>
           </td>
         </tr>
+        <tr class="table__row" colspan="10" *ngIf="!(orderItems$ | async).length">
+          No matching records found
+        </tr>
       </tbody>
     </table>
     <!--table end-->
@@ -256,13 +280,13 @@
     <div class="row row--aic" style="margin: 0 16px;">
       <div class="show-filter">
         Showing <span>1</span> to
-        <div class="dropdown" #dropdown (click)="toggleDropdown($event)">
+        <div class="dropdown" #dropdown (click)="toggleDropdown()">
           <div class="dropdown__btn">{{countPerPage}}</div>
           <ul class="dropdown__list">
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">14</li>
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">24</li>
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">34</li>
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">44</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">15</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">30</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">45</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">60</li>
           </ul>
         </div>
         of <span>{{countOfEntries$ | async}}</span> entries.
