--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -5,7 +5,7 @@
       <div class=" orders__page-title">
         Orders history
       </div>
-      <div class="orders__amount">{{countOfEntries}}</div>
+      <div class="orders__amount">{{countOfEntries$ | async}}</div>
       <div class="orders__filter-btn" (click)="openFilterPopup()">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M15.9317 0.44323C15.8028 0.147863 15.5799 0.000159206 15.2618 0H0.737807C0.420134 0 0.196893 0.147863 0.0682816 0.44323C-0.0602502 0.753723 -0.00735105 1.01904 0.227217 1.23867L5.82145 6.84086V12.3635C5.82145 12.5607 5.89335 12.731 6.03702 12.8751L8.9417 15.784C9.07798 15.9278 9.24813 16 9.45245 16C9.54315 16 9.63766 15.9809 9.73602 15.9431C10.0312 15.8142 10.1788 15.5908 10.1788 15.2726V6.8409L15.7728 1.2387C16.0075 1.01908 16.0602 0.753842 15.9317 0.44323Z" />
@@ -26,9 +26,9 @@
           <th class="table__cell-head table__cell-head--tar">Avg.Price</th>
         </tr>
       </thead>
-      <tbody class="table__body table__body--none-shadow" *ngIf="orderHistory">
+      <tbody class="table__body table__body--none-shadow">
         <!-- t-row start-->
-        <ng-container *ngFor="let item of orderHistory">
+        <ng-container *ngFor="let item of orderItems$ | async">
           <tr class="table__row--mob" [attr.data-id]="item.id" (click)="toggleDetails($event)">
             <td class="table__cell table__cell--tal">
               <div>{{item.currencyPairName}}</div>
@@ -41,7 +41,7 @@
               <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
             </td>
             <td class="table__cell table__cell--tar">
-              <div>{{item.exExchangeRate}} USD</div>
+              <div>{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
             </td>
             <td class="table__cell table__cell--arr-mob">
               <img class="" src="../../assets/img/arr-toggler-down-blue.svg">
@@ -51,15 +51,15 @@
             <td class="table__details-cell" colspan="4">
               <div class="table__details-item">
                 <div class="table__details-item-title">Amount</div>
-                <div class="table__details-item-value">{{item.amountConvert}} {{arrPairName[0]}}</div>
+                <div class="table__details-item-value">{{item.amountConvert}} {{item.currencyPairName | splitCurrency: 1}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Trading price</div>
-                <div class="table__details-item-value">{{item.exExchangeRate}} {{arrPairName[1]}}</div>
+                <div class="table__details-item-value">{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Filled</div>
-                <div class="table__details-item-value">{{item.exExchangeRate}} {{arrPairName[1]}}</div>
+                <div class="table__details-item-value">{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</div>
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">Fee</div>
@@ -67,7 +67,8 @@
               </div>
               <div class="table__details-item">
                 <div class="table__details-item-title">In total</div>
-                <div class="table__details-item-value">{{item.arrPairName}} {{arrPairName[1]}}</div>
+                <div class="table__details-item-value"> {{item.currencyPairName | splitCurrency: 2}}</div>
+                <!-- {{item.arrPairName}} -->
               </div>
             </td>
           </tr>
@@ -90,42 +91,64 @@
       </div>
       <form action="#">
         <div class="wrap-input wrap-input--with-icon filters-popup__search">
-          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+          <!-- <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency()" type="text" required>
           <label class="wrap-input__label" for="">Search</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z" />
             </svg>
-          </div>
+          </div> -->
+          <!-- <div class="search-results dropdown search">
+            <ul class="dropdown__list">
+              <li 
+                *ngFor="let item of currencyPairs$ | async" 
+                (click)="onSelectCurrencyPair(item)" 
+                class="dropdown__item"
+              >
+                {{item.name}}
+              </li>
+            </ul>
+          </div> -->
+          <ng-select 
+            class="custom"
+            [items]="currencyPairs$ | async"
+            bindLabel="name"
+            placeholder="Currency"
+            bindValue="id"
+            name="currencyPair"
+            [(ngModel)]="currencyPairId"
+          ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
         <div class="row row--jcsb">
-          <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">From</label>
-
+          <div class="wrap-input orders__datepicker">
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>
+  
             <my-date-picker 
-              name="from" 
+              name="from"
               [options]="myDatePickerOptions" 
               [(ngModel)]="modelDateFrom" 
-              (inputFieldChanged)="onFromInputFieldChanged($event)"
-            ></my-date-picker>
-            
+              (dateChanged)="dateFromChanged($event)"
+            >
+              &lt;!&ndash;&gt;&ndash;&gt;
+            </my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
-          <div class="wrap-input filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">To</label>
-
+          <div class="wrap-input orders__datepicker input-el">
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
+  
             <my-date-picker 
-              name="to" 
+              name="to"
               [options]="myDatePickerOptions" 
-              [(ngModel)]="modelDateTo" 
-              (inputFieldChanged)="onToInputFieldChanged($event)"
-            ></my-date-picker>
-
+              [(ngModel)]="modelDateTo"
+              (dateChanged)="dateToChanged($event)"
+            >
+              &gt;
+            </my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
         </div>
-        <button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <span>{{countOfEntries}}</span> results</button>
+        <button (click)="closeFilterPopup()" class="btn filters-popup__btn">See <!-- <span>{{countOfEntries$ | async}}</span> -->results</button>
       </form>
     </div>
     <!--filter-popup end-->
@@ -150,7 +173,7 @@
     <form action="">
       <div class="row orders__filters">
         <div class="wrap-input wrap-input--with-icon orders__search">
-          <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency($event.target.value)" type="text" required>
+          <!-- <input class="wrap-input__input" name="currency" [(ngModel)]="currency" (input)="filterByCurrency()" type="text" required>
           <label class="wrap-input__label" for="">Currency</label>
           <div class="wrap-input__icon">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -159,24 +182,65 @@
           </div>
           <div class="search-results dropdown search">
             <ul class="dropdown__list">
-              <li *ngFor="let item of pairs" (click)="selectNewActiveCurrencyPair(item)" class="dropdown__item">{{item.currencyPairName}}</li>
+              <li 
+                *ngFor="let item of currencyPairs$ | async" 
+                (click)="onSelectCurrencyPair(item)" 
+                class="dropdown__item"
+              >
+                {{item.name}}
+              </li>
             </ul>
-          </div>
+          </div> -->
+          <ng-select 
+            class="custom"
+            [items]="currencyPairs$ | async"
+            bindLabel="name"
+            placeholder="Currency"
+            bindValue="id"
+            name="currencyPair"
+            [(ngModel)]="currencyPairId"
+          ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input orders__datepicker">
-          <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">From</label>
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >From</label>
 
-          <my-date-picker name="from" [options]="myDatePickerOptions" [(ngModel)]="modelDateFrom" (inputFieldChanged)="onFromInputFieldChanged($event)"></my-date-picker>
-
+          <my-date-picker 
+            name="history-from"
+            [options]="myDatePickerOptions" 
+            [(ngModel)]="modelDateFrom" 
+            (dateChanged)="dateFromChanged($event)"
+          >
+            &lt;!&ndash;&gt;&ndash;&gt;
+          </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
-        <div class="wrap-input orders__datepicker">
-          <label class="wrap-input__label" [ngClass]="{'select-input_label': dateFrom}" for="">To</label>
+        <div class="wrap-input orders__datepicker input-el">
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >To</label>
 
-          <my-date-picker name="to" [options]="myDatePickerOptions" [(ngModel)]="modelDateTo" (inputFieldChanged)="onToInputFieldChanged($event)">></my-date-picker>
+          <my-date-picker  
+            name="history-to"
+            [options]="myDatePickerOptions" 
+            [(ngModel)]="modelDateTo"
+            (dateChanged)="dateToChanged($event)"
+          >
+            &gt;
+          </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
+
+        <button (click)="onFilterOrders()">
+          Search
+        </button>
+
+        <div>
+          <label class="toggler">
+            <input type="checkbox" name="toggler" [(ngModel)]="hideAllCanceled" (change)="onHideAllCanceled()">
+            <span class="toggler__indicate"></span>
+          </label>
+          <span>Hide all canceled</span>
+        </div>
+
       </div>
     </form>
     <!--table start-->
@@ -190,10 +254,11 @@
           <th class="table__cell-head table__cell-head--tal">Amount</th>
           <th class="table__cell-head table__cell-head--tal">Comission</th>
           <th class="table__cell-head table__cell-head--tar">In total</th>
+          <th class="table__cell-head table__cell-head--tar">Status</th>
         </tr>
       </thead>
-      <tbody class="table__body" *ngIf="orderHistory">
-        <tr class="table__row" *ngFor="let item of filteredOrderHistory | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
+      <tbody class="table__body">
+        <tr class="table__row" *ngFor="let item of orderItems$ | async | paginate: {itemsPerPage: countPerPage, currentPage: currentPage, totalItems: countOfEntries$ | async}">
           <td class="table__cell">
             <div class="table__date-time">
               <div>{{item.dateCreation | date:"EEEEEE"}} {{item.dateCreation | date:"dd.MM.yyyy"}}</div>
@@ -204,16 +269,16 @@
             <div class="orders__pair-wrap">
               <div class="orders__pair">
                 <div class="orders__pair-icon">
-                  <!-- <img src="../../assets/img/btc-icon.svg"> -->
+                  <img src="../../assets/img/btc-icon.svg">
                 </div>
-                <span>{{arrPairName[0]}}</span>
+                <span>{{item.currencyPairName | splitCurrency: 1}}</span>
               </div>
               <span style="margin: 0 8px;">/</span>
               <div class="orders__pair">
                 <div class="orders__pair-icon">
-                  <!-- <img src="../../assets/img/eth-icon.svg"> -->
+                  <img src="../../assets/img/eth-icon.svg">
                 </div>
-                <span>{{arrPairName[1]}}</span>
+                <span>{{item.currencyPairName | splitCurrency: 2}}</span>
               </div>
             </div>
           </td>
@@ -221,18 +286,24 @@
             <span [class]="setClassForOrderTypeField(item.operationType)">{{item.operationType}}</span>
           </td>
           <td class="table__cell">
-            <span>{{item.exExchangeRate}} USD</span>
+            <span>{{item.exExchangeRate}} {{item.currencyPairName | splitCurrency: 2}}</span>
           </td>
           <td class="table__cell">
-            <span>{{item.amountConvert}} {{arrPairName[0]}}</span>
+            <span>{{item.amountBase}} {{item.currencyPairName | splitCurrency: 1}}</span>
           </td>
           <td class="table__cell">
-            <span class="orders__comission">{{item.commissionAmountForAcceptor}}% </span><span class="orders__comission-usd">~<span>
-                0.00015 USD</span></span>
+            <span class="orders__comission">{{item.commissionValue}}% </span><span class="orders__comission-usd">~<span>
+                {{item.commissionFixedAmount}} USD</span></span>
           </td>
           <td class="table__cell table__cell--tar">
-            <span>{{item.amountWithCommission}}<span> {{arrPairName[1]}}</span></span>
+            <span>{{item.amountWithCommission}}<span> {{item.currencyPairName | splitCurrency: 2}}</span></span>
           </td>
+          <td class="table__cell table__cell--tar">
+            <span>{{item.status}}</span>
+          </td>
+        </tr>
+        <tr class="table__row" colspan="7" *ngIf="!(orderItems$ | async).length">
+          No matching records found
         </tr>
       </tbody>
     </table>
@@ -244,16 +315,16 @@
         <div class="dropdown" #dropdown (click)="toggleDropdown($event)">
           <div class="dropdown__btn">{{countPerPage}}</div>
           <ul class="dropdown__list">
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">14</li>
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">24</li>
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">34</li>
-            <li class="dropdown__item" (click)="changeItemsPerPage($event)">44</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">15</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">30</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">45</li>
+            <li class="dropdown__item" (click)="changeItemsPerPage($event)">60</li>
           </ul>
         </div>
-        of <span>{{countOfEntries}}</span> entries.
+        of <span>{{countOfEntries$ | async}}</span> entries.
       </div>
       <ul class="paginator" style="margin-left: auto;">
-        <pagination-controls (pageChange)="changePage($event)" [previousLabel]="''" [nextLabel]="''"></pagination-controls>
+        <pagination-controls (pageChange)="changePage($event)" maxSize="7" [previousLabel]="''" [nextLabel]="''"></pagination-controls>
       </ul>
     </div>
     <!--paginator end-->
