--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 @import "./assets/css/reset.css";
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet');
+@import "~@ng-select/ng-select/themes/default.theme.css";
 @import "assets/scss/style.scss";
 //@import "assets/scss/old/variables";
 //@import "assets/scss/old/animations";
