add all type of inner-transfer

--- a/src/app/balance/send-money/send-money.component.html
+++ b/src/app/balance/send-money/send-money.component.html
@@ -43,8 +43,8 @@
     <!-- modal header end -->
     <div class="modal__content">
       <!--<app-send-step-one></app-send-step-one>-->
-      <app-send-step-two></app-send-step-two>
-      <!--<app-send-step-three></app-send-step-three>-->
+      <!--<app-send-step-two></app-send-step-two>-->
+      <app-send-step-three></app-send-step-three>
     </div>
   </div>
 </div>
