--- a/src/app/balance/send-money/send-step-three/send-step-three.component.html
+++ b/src/app/balance/send-money/send-step-three/send-step-three.component.html
@@ -1,3 +1,3 @@
-<p>
-  send-step-three works!
-</p>
+<!--<app-transfer-instant></app-transfer-instant>-->
+<app-transfer-protected-email-code></app-transfer-protected-email-code>
+<!--<app-transfer-protected-code></app-transfer-protected-code>-->
