fix login popup inputs

--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -6,78 +6,79 @@
     </ng-template>
 
     <ng-template #logInTemplate>
-    <h6 class="popup__title">Log in</h6>
-    <h4 class="popup__subtitle">{{statusMessage}}</h4>
+      <h6 class="popup__title">Log in</h6>
+      <h4 class="popup__subtitle">{{statusMessage}}</h4>
 
-    <form class="popup__form" [formGroup]="loginForm">
-      <div >
-        <div class="wrap-input popup__wrap-input">
-          <input class="wrap-input__input" type="text"
-                 formControlName="email"
-                 [ngClass]="{'wrap-input__input--error': !loginForm.get('email').valid && loginForm.get('email').touched}"
-          >
-          <label class="wrap-input__label" for=""
-                 [ngClass]="{'wrap-input__label--error': !loginForm.get('email').valid && loginForm.get('email').touched}"
-          >Email</label>
-          <div class="wrap-input__line"
-               [ngClass]="{'wrap-input__line--error': !loginForm.get('email').valid && loginForm.get('email').touched}"
-          ></div>
-          <!--Input error section starts-->
-          <div *ngIf="loginForm.get('email').touched && loginForm.get('email').errors != null">
-            <span class="wrap-input__message--error" *ngIf="loginForm.get('email').errors['required']">
+      <form class="popup__form" [formGroup]="loginForm">
+        <div>
+          <div class="wrap-input popup__wrap-input">
+            <input class="wrap-input__input" type="text"
+                   required
+                   formControlName="email"
+                   [ngClass]="{'wrap-input__input--error': !loginForm.get('email').valid && loginForm.get('email').touched}"
+            >
+            <label class="wrap-input__label" for=""
+                   [ngClass]="{'wrap-input__label--error': !loginForm.get('email').valid && loginForm.get('email').touched}"
+            >Email</label>
+            <div class="wrap-input__line"
+                 [ngClass]="{'wrap-input__line--error': !loginForm.get('email').valid && loginForm.get('email').touched}"
+            ></div>
+            <!--Input error section starts-->
+            <div *ngIf="loginForm.get('email').touched && loginForm.get('email').errors != null">
+            <span class="wrap-input__message wrap-input__message--error" *ngIf="loginForm.get('email').errors['required']">
               This field is required.
             </span>
-            <span  *ngIf="loginForm.get('email').invalid && !loginForm.get('email').errors['required']"
-              class="wrap-input__message--error">
+              <span *ngIf="loginForm.get('email').invalid && !loginForm.get('email').errors['required']"
+                    class=" wrap-input__message wrap-input__message--error">
               Please, enter valid email address.
             </span>
+            </div>
+            <!--Input error section ends-->
           </div>
-          <!--Input error section ends-->
-        </div>
 
-        <div class="wrap-input popup__wrap-input">
-          <input class="wrap-input__input"
-                 [type]="getInputType()"
-                 formControlName="password"
-                 [ngClass]="{'wrap-input__input--error': !loginForm.get('password').valid && loginForm.get('password').touched}"
-          >
-          <label class="wrap-input__label" for=""
-                 [ngClass]="{'wrap-input__label--error': !loginForm.get('password').valid && loginForm.get('password').touched}"
-          >Password</label>
-          <div class="wrap-input__line"
-               [ngClass]="{'wrap-input__line--error': !loginForm.get('password').valid && loginForm.get('password').touched}"
-          ></div>
-          <span
-            class="wrap-input__show-password"
-            (click)="togglePasswordVisibility()"
-            [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
-          >
+          <div class="wrap-input popup__wrap-input">
+            <input class="wrap-input__input"
+                   required
+                   [type]="getInputType()"
+                   formControlName="password"
+                   [ngClass]="{'wrap-input__input--error': !loginForm.get('password').valid && loginForm.get('password').touched}"
+            >
+            <label class="wrap-input__label" for=""
+                   [ngClass]="{'wrap-input__label--error': !loginForm.get('password').valid && loginForm.get('password').touched}"
+            >Password</label>
+            <div class="wrap-input__line"
+                 [ngClass]="{'wrap-input__line--error': !loginForm.get('password').valid && loginForm.get('password').touched}"
+            ></div>
+            <span
+              class="wrap-input__show-password"
+              (click)="togglePasswordVisibility()"
+              [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+            >
           </span>
-          <!--Input error section starts-->
-          <div *ngIf="loginForm.get('password').touched && loginForm.get('password').errors != null">
-            <span class="wrap-input__message--error"
+            <!--Input error section starts-->
+            <div *ngIf="loginForm.get('password').touched && loginForm.get('password').errors != null">
+            <span class=" wrap-input__message wrap-input__message--error"
                   *ngIf="loginForm.get('password').errors['required']">
               This field is required.
             </span>
+            </div>
+            <!--Input error section ends-->
           </div>
-          <!--Input error section ends-->
         </div>
-      </div>
-      <button class="btn popup__btn"
-              (click)="onSubmit()"
-              [disabled]="!loginForm.valid"
-              [ngClass]="{'popup__btn--active': loginForm.valid,
+        <button class="btn popup__btn"
+                (click)="onSubmit()"
+                [disabled]="!loginForm.valid"
+                [ngClass]="{'popup__btn--active': loginForm.valid,
               'popup__btn--error': (!loginForm.get('password').valid && loginForm.get('password').touched) || ( !loginForm.get('email').valid && loginForm.get('email').touched)}"
-      >
-        Authorise me
-      </button>
-    </form>
-    <div class="popup__links-wrap">
-      <a class="popup__link popup__link--hidden-mob" (click)="openRegistration()">Go to registration form</a>
-      <a class="popup__link" (click)="openRecoveryPasswordPopup()">Forgot password?</a>
-    </div>
-    <a class="popup__link-mob" (click)="openRegistration()" >Registration</a>
-    <!--<a class="popup__link-mob" (click)="openRegistration()">Registration</a>-->
+        >
+          Authorise me
+        </button>
+      </form>
+      <div class="popup__links-wrap">
+        <a class="popup__link popup__link--hidden-mob" (click)="openRegistration()">Go to registration form</a>
+        <a class="popup__link" (click)="openRecoveryPasswordPopup()">Forgot password?</a>
+      </div>
+      <a class="popup__link-mob" (click)="openRegistration()">Registration</a>
     </ng-template>
 
     <ng-template #captchaTemplate>
@@ -95,7 +96,7 @@
       <h4 class="popup__subtitle" [innerHTML]="twoFaAuthModeMessage"></h4>
 
       <form class="popup__form" [formGroup]="pinForm">
-        <div >
+        <div>
 
           <div class="wrap-input popup__wrap-input">
             <input
@@ -113,7 +114,7 @@
             <!--Input error section starts-->
             <div>
             <span *ngIf="(pinForm.get('pin').touched && pinForm.get('pin').errors != null)"
-              class="wrap-input__message--error">
+                  class=" wrap-input__message wrap-input__message--error">
               This field is required.
             </span>
             </div>
@@ -125,7 +126,8 @@
                 (click)="resolvedCaptcha()"
                 [disabled]="!pinForm.valid"
                 [ngClass]="{'popup__btn--active': pinForm.valid,
-                'popup__btn--error': !pinForm.valid && pinForm.get('pin').touched}">Authorise me</button>
+                'popup__btn--error': !pinForm.valid && pinForm.get('pin').touched}">Authorise me
+        </button>
       </form>
       <div class="popup__links-wrap">
         <a class="popup__link popup__link--hidden-mob" href="reg-email.html" (click)="openRegistration()">Go to registration form</a>
