--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.scss
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.scss
@@ -1,5 +1,8 @@
 re-captcha{
   margin: 0 auto;
 }
-
-
+@media (min-width: 1200px){
+  .popup__links-wrap{
+    justify-content: space-between;
+  }
+}
