--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.scss
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.scss
@@ -4,5 +4,8 @@ re-captcha{
 @media (min-width: 1200px){
   .popup__links-wrap{
     justify-content: space-between;
+    &--center{
+      justify-content: center;
+    }
   }
 }
