--- a/src/app/balance/send-money/send-step-one/send-step-one.component.html
+++ b/src/app/balance/send-money/send-step-one/send-step-one.component.html
@@ -2,6 +2,14 @@
 <div class="subtitle modal__subtitle">
   <p>How would you like to send the money?</p>
 </div>
-<button class="btn btn--center btn--empty-blue">Crypto withdrawal</button>
-<button class="btn btn--center btn--empty-blue">Fiat withdrawal</button>
-<button class="btn btn--center btn--empty-blue">Inner transfer</button>
+<button class="btn btn--center btn--empty-blue"
+        (click)="onChooseSend('Crypto Withdrawal')"
+>Crypto withdrawal</button>
+
+<button class="btn btn--center btn--empty-blue"
+        (click)="onChooseSend('Fiat Withdrawal')"
+>Fiat withdrawal</button>
+
+<button class="btn btn--center btn--empty-blue"
+        (click)="onChooseSend('Inner Transfer')"
+>Inner transfer</button>
