--- a/src/app/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -112,3 +112,17 @@
     margin-top: 32px;
   }
 }
+// ---------------------
+.select__searching-item {
+  span {
+    color: #ccc;
+  }
+}
+
+
+.select__search-input {
+  color: #ccc !important;
+}
+perfect-scrollbar{
+  height: 160px;
+}
