--- a/src/app/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -1,17 +1,17 @@
 <div class="title send__title">Make Crypto Withdrawal in <span>BTC</span></div>
 <div class="send__inputs-wrap">
   <div class="select send__select">
-    <div class="select__value select__value--active">
-      <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-      BTC
+    <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
+      <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+      {{activeCrypto.name}}
     </div>
     <div class="select__label">Currency</div>
     <div class="select__line"></div>
     <div class="select__triangle"></div>
     <!--add select__list-searching--open for looking open state-->
-    <div class="select__list-searching">
+    <div class="select__list-searching" *ngIf="openCurrencyDropdown">
       <div class="select__search">
-        <input class="select__search-input" type="text" placeholder="Search" required>
+        <input class="select__search-input" type="text" placeholder="Search" (input)="searchCoin($event)">
         <div class="select__search-icon">
           <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -20,34 +20,19 @@
         </div>
       </div>
       <div class="select__list-searching-body">
-        <h6 class="select__searching-items-title">A</h6>
-        <div class="select__searching-items-wrap">
-          <div class="select__searching-item">
-            <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-            <span>ETH</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-            <span>BTC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-            <span>ZEC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
-            <span>ETH</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">
-            <span>BTC</span>
-          </div>
-          <div class="select__searching-item">
-            <img src="../../assets/img/zec-icon.svg" class="select__list-item-icon">
-            <span>ZEC</span>
-          </div>
 
-        </div>
+        <perfect-scrollbar>
+          <ng-container *ngFor="let letter of alphabet">
+            <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
+            <div class="select__searching-items-wrap">
+              <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter" (click)="selectCurrency(name)">
+                <!--<img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">-->
+                <span>{{name.name}}</span>
+              </div>
+            </div>
+          </ng-container>
+        </perfect-scrollbar>
+
       </div>
     </div>
   </div>
