--- a/src/app/balance/send-money/send-step-two/send-step-two.component.html
+++ b/src/app/balance/send-money/send-step-two/send-step-two.component.html
@@ -1,3 +1,9 @@
-<!--<app-send-crypto></app-send-crypto>-->
-<!--<app-send-fiat></app-send-fiat>-->
-<app-send-inner-transfer></app-send-inner-transfer>
+<app-send-crypto
+*ngIf="choosedName === 'Crypto Withdrawal'"
+></app-send-crypto>
+<app-send-fiat
+*ngIf="choosedName === 'Fiat Withdrawal'"
+></app-send-fiat>
+<app-send-inner-transfer
+*ngIf="choosedName === 'Inner Transfer'"
+></app-send-inner-transfer>
