add send-successful empty

--- a/src/app/balance/send-money/send-money.component.html
+++ b/src/app/balance/send-money/send-money.component.html
@@ -10,7 +10,7 @@
     <!-- modal header start -->
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step
-        <span class="steps__counter-val">1</span>/3</div>
+        <span class="steps__counter-val">1</span>/4</div>
       <div class="modal__header-mob-controls">
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
@@ -30,21 +30,36 @@
             <span class="steps__title">Send money</span>
           </a>
         </li>
-        <li class="steps__item steps__item--current">
+        <li class="steps__item">
           <a class="steps__link">
-            <span class="steps__number steps__number--current">2</span>
+            <span class="steps__number steps__number--valid">2</span>
             <span class="steps__number-mob-current">2. Crypto Withdrawal</span>
             <span class="steps__title">Crypto Withdrawal</span>
           </a>
         </li>
+        <li class="steps__item">
+          <a class="steps__link">
+            <span class="steps__number steps__number--valid">3</span>
+            <span class="steps__number-mob-current">3. Name</span>
+            <span class="steps__title">Name</span>
+          </a>
+        </li>
+        <li class="steps__item steps__item--current">
+          <a class="steps__link">
+            <span class="steps__number steps__number--current">4</span>
+            <span class="steps__number-mob-current">4. Accepted</span>
+            <span class="steps__title">Accepted</span>
+          </a>
+        </li>
       </ul>
-      <div class="steps__counter">step <span class="steps__counter-val">1</span>/ 3</div>
+      <div class="steps__counter">step <span class="steps__counter-val">1</span>/ 4</div>
     </div>
     <!-- modal header end -->
     <div class="modal__content">
       <!--<app-send-step-one></app-send-step-one>-->
       <!--<app-send-step-two></app-send-step-two>-->
-      <app-send-step-three></app-send-step-three>
+      <!--<app-send-step-three></app-send-step-three>-->
+      <app-send-successful></app-send-successful>
     </div>
   </div>
 </div>
